--- a/public/screen.css
+++ b/public/screen.css
@@ -6,3 +6,13 @@ body {
   margin: 0;
   font: 16px / 1 sans-serif;
 }
+
+.headerimg {display: flex
+
+}
+
+imagebox {display: flex;
+          position: center;
+          
+
+}
