--- a/public/screen.css
+++ b/public/screen.css
@@ -63,21 +63,25 @@ ul {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-left:420px;
+    margin-left: 420px;
 }
 
 a {
     padding-left: 20px;
 }
 
-.aside {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
+li.row1 {
+    justify-content: flex-end;
 }
 
-.row1 {
+p {
     display: flex;
+    max-width: 400px;
     flex-direction: column;
+    justify-content: space-around;
+    align-items: stretch;
+}
+
+footer {
+    display: flex;
 }
